tests/snapshots/files__bitwise_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(let prf0 (Fiat (= 0 0)))
(Trans (= 0 0) prf0 prf0)(let prf0 (Fiat (= 8 8)))
(Trans (= 8 8) prf0 prf0)(let prf0 (Fiat (= 10 10)))
(Trans (= 10 10) prf0 prf0)(let prf0 (Fiat (= 2 2)))
(Trans (= 2 2) prf0 prf0)(let prf0 (Fiat (= 8 8)))
(Trans (= 8 8) prf0 prf0)(let prf0 (Fiat (= 1 1)))
(Trans (= 1 1) prf0 prf0)(let prf0 (Fiat (= 2 2)))
(Trans (= 2 2) prf0 prf0)(let prf0 (Fiat (= 2 2)))
(Trans (= 2 2) prf0 prf0)(let prf0 (Fiat (= -1 -1)))
(Trans (= -1 -1) prf0 prf0)
