tests/snapshots/files__calc_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
AConst: 1
BConst: 1
IConst: 1
aConst: 1
bConst: 1
g*: 3
inv: 0
