tests/snapshots/files__combinators_desugar.snap
---
source: tests/files.rs
expression: snapshot_content
---
(CApp (CApp (CAddConst) (CN 1)) (CN 2))
