tests/snapshots/files__combinators_term_encoding.snap
---
source: tests/files.rs
expression: snapshot_content
---
(CApp (CApp (CAddConst) (CN 1)) (CN 2))
Abs: 1
Abs: 1
Add: 5
Add: 2
App: 1
App: 1
CAbs: 125
CAbs: 124
CAddConst: 1
CAddConst: 1
CApp: 449
CApp: 434
CFConst: 1
CFConst: 1
CIfConst: 1
CIfConst: 1
CN: 3
CN: 3
CTConst: 1
CTConst: 1
CVar: 1
CVar: 1
Comb: 15
Comb: 10
FConst: 1
FConst: 1
IConst: 1
IConst: 1
If: 3
If: 2
KConst: 1
KConst: 1
N: 4
N: 4
SConst: 1
SConst: 1
TConst: 1
TConst: 1
Uncomb: 11
Uncomb: 9
Var: 1
Var: 1
